--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ShowMeThePC</title>
+    <link rel="stylesheet" type="text/css" href="./reset.css">
     <style>
 
         a {
@@ -16,9 +17,11 @@
 
         #header {
             position: relative;
-            display: flex; 
+            display: flex;
+            height: 100px;
             justify-content: space-between;
             background-color: blue;
+
         }
 
         #header #logo {
@@ -27,25 +30,37 @@
         }
 
         #header #logo>h1 {
-
+            font-size: 40pt;
+            line-height: 100px;
         }
 
         #header #userInfo {
             position: relative;
+            width:200px;
+            background-color: lightblue;
+        }
+
+        #header #userInfo a {
+            position: relative;
+            top:40px;
+            left:40px;
+            font-size: 15pt;
             background-color: gray;
         }
 
-        #header #userInfo a{
-            position: relative;
-            top:30px;
-        }
 
         #settingNavigation {
             position: relative;
+            height:100px;
             background-color: red;
             cursor: pointer;
             text-align: center;
             transition: .2s ease;
+        }
+
+        #settingNavigation h2 {
+            font-size: 30pt;
+            line-height: 100px;
         }
 
         #settingNavigation:hover {
@@ -55,6 +70,61 @@
         #content {
             position: relative;
             background-color: hotpink;
+        }
+
+        #content .board_list {
+            position: relative;
+            display: flex;
+            flex-wrap: wrap;
+            background-color: teal;
+        }
+
+        #content .board_list .board_item {
+            position: relative;
+            width: 200px;
+            height:300px;
+            margin-left: 50px;
+            margin-top: 50px;
+            background-color: lightcoral;
+        }
+
+        #content .board_list .board_item .board_title {
+            position: relative;
+            height: 100px;
+            font-size: 20pt;
+            line-height: 50px;
+            background-color: lightsteelblue;
+        }
+
+        #content .board_list .board_item .board_content {
+            position: relative;
+            font-size: 16pt;
+            line-height: 30px;
+        }
+
+        #content .board_list .board_item .board_setting_info {
+            position: absolute;
+            width:200px;
+            height: 50px;
+            background-color: lime;
+            bottom: 0;
+        }
+
+        #content .board_list .board_item .board_setting_info .board_setting_info_price {
+            display: block;
+            line-height: 50px;
+            font-size: 15pt;
+            text-align: center;
+        }
+
+        #paginate {
+            height:100px;
+            background-color: lightsalmon;
+        }
+
+        #footer {
+            height:200px;
+            background-color: red;
         }
 
     </style>
@@ -69,19 +139,61 @@
         </span><!--userInfo End-->
     </div><!--header end-->
     
-    <div id="settingNavigation"><h2>Click To Set!</h2></div><!--settingNavigation end-->
+    <div id="settingNavigation">
+        <h2>Click To Set!</h2>
+    </div><!--settingNavigation end-->
 
     <div id="content">
         <ul class="board_list">
-            <li class="board_item">
-                <h5 class="board_title">안녕</h5>
+            <a href="#"><li class="board_item">
+                <h5 class="board_title">안녕안녕안녕안녕안녕</h5>
                 <span class="board_content">내가이번에 컴퓨터를 맞췄단말이야</span>
                 <div class="board_setting_info">
                     <span class="board_setting_info_price">120,000원</span>
                 </div>
-            </li>
+            </li></a>
+
+            <a href="#"><li class="board_item">
+                <h5 class="board_title">안녕안녕안녕안녕안녕</h5>
+                <span class="board_content">내가이번에 컴퓨터를 맞췄단말이야</span>
+                <div class="board_setting_info">
+                    <span class="board_setting_info_price">120,000원</span>
+                </div>
+            </li></a>
+
+            <a href="#"><li class="board_item">
+                <h5 class="board_title">안녕안녕안녕안녕안녕</h5>
+                <span class="board_content">내가이번에 컴퓨터를 맞췄단말이야</span>
+                <div class="board_setting_info">
+                    <span class="board_setting_info_price">120,000원</span>
+                </div>
+            </li></a>
+
+            <a href="#"><li class="board_item">
+                <h5 class="board_title">안녕안녕안녕안녕안녕</h5>
+                <span class="board_content">내가이번에 컴퓨터를 맞췄단말이야</span>
+                <div class="board_setting_info">
+                    <span class="board_setting_info_price">120,000원</span>
+                </div>
+            </li></a>
+            <a href="#"><li class="board_item">
+                <h5 class="board_title">안녕안녕안녕안녕안녕</h5>
+                <span class="board_content">내가이번에 컴퓨터를 맞췄단말이야</span>
+                <div class="board_setting_info">
+                    <span class="board_setting_info_price">120,000원</span>
+                </div>
+            </li></a>
+
         </ul>
     </div><!--content end-->
+
+    <div id="paginate">
+
+    </div>
+
+    <div id="footer">
+
+    </div>
 
 
 
