fix: boards View에서 가격정보 표시 문제 해결 -Setting은 Device의 영속성을 전이받아 관리해준다. 그래서 Setting을 만들시에 Device들을 받아서 처리한다. 여기서 제일 중요한점을 간과했다. Setting에 Device를 추가하는 만큼 Device들도 개별적으로 Setting을 설정해줬었어야한다. 그부분을 놓친게 오류의 원인. 따라서 이부분을 해결해줬다. -DTO는 이 로직에서는 상관없는 내용이였다. 나중에 구현할예정(사실 직접 구현해보고나서야 필요없다는걸 알게됨) -Board엔티티 내부에도 Setting의 총 가격을 갖고오는 로직이 필요하다고생각해서 구현했다. 커뮤니티 게시글의 가격이란 세팅가격밖에없기때문이고 또 자주 쓰이기때문이다. -결과적으로, View에서 가격이 표시되는것도 확인이됐다.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -149,7 +149,7 @@
                 <h5 class="board_title" th:text="${board.title}">제목</h5>
                 <span class="board_content" th:text="${board.content}">컨텐츠</span>
                 <div class="board_setting_info">
-                    <span class="board_setting_info_price" th:if="${board.setting!=null}" th:text="${board.setting.getTotalPrice()}">가격</span>
+                    <span class="board_setting_info_price" th:if="${board.isSettingExist()}" th:text="${board.getTotalPrice()}">가격</span>
                 </div>
             </li></a>
 
