--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,69 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>ShowMeThePC</title>
-    <link rel="stylesheet" type="text/css" href="/reset.css">
+    <link rel="stylesheet" type="text/css" href="/static/baseTemplate.css">
     <style>
 
-        a {
-            text-decoration: none;
-            color: black;
-        }
 
-        a:active {
-            color: black;
-        }
-
-        #header {
-            position: relative;
-            display: flex;
-            height: 100px;
-            justify-content: space-between;
-            background-color: blue;
-
-        }
-
-        #header #logo {
-            position: relative;
-            background-color: purple;
-        }
-
-        #header #logo>h1 {
-            font-size: 40pt;
-            line-height: 100px;
-        }
-
-        #header #userInfo {
-            position: relative;
-            width:200px;
-            background-color: lightblue;
-        }
-
-        #header #userInfo a {
-            position: relative;
-            top:40px;
-            left:40px;
-            font-size: 15pt;
-            background-color: gray;
-        }
-
-
-        #settingNavigation {
-            position: relative;
-            height:100px;
-            background-color: red;
-            cursor: pointer;
-            text-align: center;
-            transition: .2s ease;
-        }
-
-        #settingNavigation h2 {
-            font-size: 30pt;
-            line-height: 100px;
-        }
-
-        #settingNavigation:hover {
-            background-color: lightcoral;
-        }
 
         #content {
             position: relative;
@@ -122,10 +63,6 @@
             background-color: lightsalmon;
         }
 
-        #footer {
-            height:200px;
-            background-color: red;
-        }
 
     </style>
 </head>
@@ -135,7 +72,7 @@
         <span id="logo"><h1>ShowMeThePC</h1></span> <!--logo end-->
         <span id="userInfo">
             <a href="#" class="log_in_btn">로그인</a>
-            <a href="#" class="register_btn">회원가입</a>
+            <a href="/member" class="register_btn">회원가입</a>
         </span><!--userInfo End-->
     </div><!--header end-->
     
