feat: 멤버도메인 수정, 로그인로직 초안 -멤버도메인에 Password가없었음(..) 따라서 이부분 추가 - 관련 로직들 수정 -컨트롤러 로그인 URL매핑시켜놓음 *로그인 뷰단 생성필요 *로그인 서비스로직 구현필요( parameter : email, password)

--- a/src/main/resources/templates/registerForm.html
+++ b/src/main/resources/templates/registerForm.html
@@ -59,6 +59,7 @@
     <form action="/member" method="post" th:object="${form}">
         <label>이름<input id="name" th:field="*{name}" name="name"></label>
         <label>이메일<input id="email" th:field="*{email}" name="email"></label>
+        <label>비밀번호<input id="password" th:field="*{password}" name="password"></label>
         <label>도시<input id="city" th:field="*{city}" name="city"></label>
         <label>도로명주소<input id="street" th:field="*{street}" name="street"></label>
         <label>우편번호<input id="zipcode" th:field="*{zipcode}" name="zipcode"></label>
