--- a/src/main/resources/templates/registerForm.html
+++ b/src/main/resources/templates/registerForm.html
@@ -37,7 +37,6 @@
             border: 1px solid gray;
         }
 
-        #content
     </style>
 </head>
 <body>
@@ -66,6 +65,11 @@
         <button id="registerBtn" type="submit">가입</button>
     </form>
 </div>
+
+<div id="footer">
+
+</div>
+
 
 </body>
 </html>
