feat&fix: 로그인뷰생성 & 리소스접근오류해결 & 로그인로직 동작성공 -리소스접근 경로 수정, SpringBoot가 자동 탐색하는 경로를 간과함. 따라서 해당부분 삭제 -로그인로직 동작 성공적으로 수행확인 -세션을 사용하여 로그인사용자 속성 추가 *로그인시 헤더부분 변경(로그인/회원가입 -> 마이페이지) 세팅컨텐츠 뷰 생성 & 컨트롤러 생성 필요

--- a/src/main/resources/templates/logInForm.html
+++ b/src/main/resources/templates/logInForm.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>로그인</title>
-    <link rel="stylesheet" type="text/css" href="/static/baseTemplate.css">
+    <link rel="stylesheet" type="text/css" href="/baseTemplate.css">
     <style>
 
         #content {
@@ -36,8 +36,8 @@
 <div id="header">
     <span id="logo"><h1>ShowMeThePC</h1></span> <!--logo end-->
     <span id="userInfo">
-            <a href="#" class="log_in_btn">로그인</a>
-            <a href="#" class="register_btn">회원가입</a>
+            <a href="/logIn" class="log_in_btn">로그인</a>
+            <a href="/member" class="register_btn">회원가입</a>
         </span><!--userInfo End-->
 </div><!--header end-->
 
@@ -47,7 +47,7 @@
 
 
 <div id="content">
-    <form action="/login" method="post">
+    <form action="/logIn" method="post">
         <label>이메일<input id="email" name="email"></label>
         <label>비밀번호<input type="password" id="password" name="password"></label>
         <button id="submit_btn">로그인</button>
