--- a/src/main/resources/static/baseTemplate.css
+++ b/src/main/resources/static/baseTemplate.css
@@ -1,6 +1,6 @@
-/*@import url("reset.css");*/
-/*@import url("header.css");*/
-/*@import url("footer.css");*/
-@import "reset.css";
-@import "header.css";
-@import "footer.css";
+@import url("/reset.css");
+@import url("/header.css");
+@import url("/footer.css");
+/*@import "/static/reset.css";*/
+/*@import "/static/header.css";*/
+/*@import "/static/footer.css";*/
