--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ShowMeThePC</title>
-    <link rel="stylesheet" type="text/css" href="/static/baseTemplate.css">
+    <link rel="stylesheet" type="text/css" href="/baseTemplate.css">
     <style>
 
 
@@ -71,7 +71,7 @@
     <div id="header">
         <span id="logo"><h1>ShowMeThePC</h1></span> <!--logo end-->
         <span id="userInfo">
-            <a href="#" class="log_in_btn">로그인</a>
+            <a href="/logIn" class="log_in_btn">로그인</a>
             <a href="/member" class="register_btn">회원가입</a>
         </span><!--userInfo End-->
     </div><!--header end-->
