--- a/src/main/resources/templates/registerForm.html
+++ b/src/main/resources/templates/registerForm.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>회원가입</title>
-    <link rel="stylesheet" type="text/css" href="/static/baseTemplate.css">
+    <link rel="stylesheet" type="text/css" href="/baseTemplate.css">
     <style>
 
         #content {
@@ -44,8 +44,8 @@
 <div id="header">
     <span id="logo"><h1>ShowMeThePC</h1></span> <!--logo end-->
     <span id="userInfo">
-            <a href="#" class="log_in_btn">로그인</a>
-            <a href="#" class="register_btn">회원가입</a>
+            <a href="/logIn" class="log_in_btn">로그인</a>
+            <a href="/member" class="register_btn">회원가입</a>
         </span><!--userInfo End-->
 </div><!--header end-->
 
