feat: 로그인시 헤더(로그인/회원가입->마이페이지) & 세션활용 -세션을 활용하여 로그인 시 해당 멤버 정보속성을 세션에추가 -logInMember객체를 통해 뷰 단에서 헤더부분을 수정 *헤더 푸터 네비게이션부분 템플릿화 필요

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,9 +5,6 @@
     <title>ShowMeThePC</title>
     <link rel="stylesheet" type="text/css" href="/baseTemplate.css">
     <style>
-
-
-
         #content {
             position: relative;
             background-color: hotpink;
@@ -70,9 +67,10 @@
     
     <div id="header">
         <span id="logo"><h1>ShowMeThePC</h1></span> <!--logo end-->
-        <span id="userInfo">
-            <a href="/logIn" class="log_in_btn">로그인</a>
-            <a href="/member" class="register_btn">회원가입</a>
+        <span id="userInfo" >
+            <a href="/logIn" class="log_in_btn" th:if="${logInMember==null}">로그인</a>
+            <a href="/member" class="register_btn" th:if="${logInMember==null}">회원가입</a>
+            <a href="/myPage" class="my_page_btn" th:if="${logInMember!=null}">마이페이지</a>
         </span><!--userInfo End-->
     </div><!--header end-->
     
