--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -64,19 +64,9 @@
     </style>
 </head>
 <body>
-    
-    <div id="header">
-        <span id="logo"><h1>ShowMeThePC</h1></span> <!--logo end-->
-        <span id="userInfo" >
-            <a href="/logIn" class="log_in_btn" th:if="${logInMember==null}">로그인</a>
-            <a href="/member" class="register_btn" th:if="${logInMember==null}">회원가입</a>
-            <a href="/myPage" class="my_page_btn" th:if="${logInMember!=null}">마이페이지</a>
-        </span><!--userInfo End-->
-    </div><!--header end-->
-    
-    <div id="settingNavigation">
-        <h2>Click To Set!</h2>
-    </div><!--settingNavigation end-->
+
+    <div th:replace="/fragments/header :: header"/>
+    <div th:replace="/fragments/settingNavigation :: settingNavigation"/>
 
     <div id="content">
         <ul class="board_list">
@@ -95,10 +85,7 @@
 
     </div>
 
-    <div id="footer">
-
-    </div>
-
+    <div th:replace="/fragments/footer :: footer"/>
 
 
 </body>
