--- a/src/main/resources/templates/registerForm.html
+++ b/src/main/resources/templates/registerForm.html
@@ -41,17 +41,8 @@
 </head>
 <body>
 
-<div id="header">
-    <span id="logo"><h1>ShowMeThePC</h1></span> <!--logo end-->
-    <span id="userInfo">
-            <a href="/logIn" class="log_in_btn">로그인</a>
-            <a href="/member" class="register_btn">회원가입</a>
-        </span><!--userInfo End-->
-</div><!--header end-->
-
-<div id="settingNavigation">
-    <h2>Click To Set!</h2>
-</div><!--settingNavigation end-->
+<div th:replace="/fragments/header :: header"/>
+<div th:replace="/fragments/settingNavigation :: settingNavigation"/>
 
 
 <div id="content">
@@ -66,9 +57,7 @@
     </form>
 </div>
 
-<div id="footer">
-
-</div>
+<div th:replace="/fragments/footer :: footer"/>
 
 
 </body>
