refactor: 타임리프에서 직접 세션접근하게끔 리팩토링 -따라서 로그인시 모델에 멤버객체넘겨줄 필요 없다 *로그아웃 구현 필요

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,10 +3,12 @@
 
 
 <div id="header" th:fragment="header">
-    <span id="logo"><h1>ShowMeThePC</h1></span> <!--logo end-->
+    <span id="logo">
+        <a href="/index"><h1>ShowMeThePC</h1></a>
+    </span> <!--logo end-->
     <span id="userInfo" >
-            <a href="/logIn" class="log_in_btn" th:if="${logInMember==null}">로그인</a>
-            <a href="/member" class="register_btn" th:if="${logInMember==null}">회원가입</a>
-            <a href="/myPage" class="my_page_btn" th:if="${logInMember!=null}">마이페이지</a>
+            <a href="/logIn" class="log_in_btn" th:if="${session.logInMember==null}">로그인</a>
+            <a href="/member" class="register_btn" th:if="${session.logInMember==null}">회원가입</a>
+            <a href="/myPage" class="my_page_btn" th:if="${session.logInMember!=null}">마이페이지</a>
         </span><!--userInfo End-->
 </div><!--header end-->
