--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,11 +4,12 @@
 
 <div id="header" th:fragment="header">
     <span id="logo">
-        <a href="/index"><h1>ShowMeThePC</h1></a>
+        <h1><a href="/index">ShowMeThePC</a></h1>
     </span> <!--logo end-->
     <span id="userInfo" >
             <a href="/logIn" class="log_in_btn" th:if="${session.logInMember==null}">로그인</a>
             <a href="/member" class="register_btn" th:if="${session.logInMember==null}">회원가입</a>
             <a href="/myPage" class="my_page_btn" th:if="${session.logInMember!=null}">마이페이지</a>
+            <a href="/logOut" class="log_out_btn" th:if="${session.logInMember!=null}">로그아웃</a>
         </span><!--userInfo End-->
 </div><!--header end-->
