style: settingNavigation, BoardController Mapping URL변경 -네비게이션은 의미상 <a>가 맞다고 생각하여 변경 -BoardController의 Mapping Url "/boards"가 "/" "/index"와 동일하므로 스타일변경 *Setting뷰 로직 수행예정

--- a/src/main/resources/static/header.css
+++ b/src/main/resources/static/header.css
@@ -32,6 +32,7 @@
 }
 
 #settingNavigation {
+    display: block;
     position: relative;
     height:100px;
     background-color: red;
@@ -40,7 +41,7 @@
     transition: .2s ease;
 }
 
-#settingNavigation h2 {
+#settingNavigation span {
     font-size: 30pt;
     line-height: 100px;
 }
