--- a/src/main/resources/templates/fragments/settingNavigation.html
+++ b/src/main/resources/templates/fragments/settingNavigation.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<div id="settingNavigation" th:fragment="settingNavigation">
-    <h2>Click To Set!</h2>
-</div><!--settingNavigation end-->
+<a href="/setting" id="settingNavigation" th:fragment="settingNavigation">
+    <span>Click To Set!</span>
+</a><!--settingNavigation end-->
