bug: 컨트롤러 테스트 오류 -임시로 테스트를 위하여 Mock을 사용한 Contoller테스트에 맞게 Url을 수정하여 진행 그러나 Test시, 접근하지도않았던 saveSetting이 실행되고 멋대로 오류. 원인파악중...

--- a/src/main/resources/templates/settingForm.html
+++ b/src/main/resources/templates/settingForm.html
@@ -119,13 +119,15 @@
         let selectedValue = selectList.options[selectList.selectedIndex].value;
         let xhr = new XMLHttpRequest();
 
-        let url = '/setting/'+selectedValue; // '/setting/1' 로 제대로 나오는데 접근이안된다. Why?
+        let url = '/setting/'+selectedValue+'/run'; // '/setting/1' 로 제대로 나오는데 접근이안된다. Why?
 
+        alert(url);
         xhr.open('GET',url);
         xhr.setRequestHeader('Accept','application/json');
 
+        alert("go!?");
         xhr.onload = function(e){
-
+            alert("hey");
             if(xhr.status==200){
                 alert("불러오기 성공");
                 // let json = Json.parse(xhr.responseText);
@@ -141,8 +143,6 @@
             }else{
                 alert("불러오기 실패");
             }//if~else end
-            }
-
         }
     }
 
